--- a/src/main/resources/templates/reservation-mine.html
+++ b/src/main/resources/templates/reservation-mine.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/toss-style.css">
+    <script src="https://js.tosspayments.com/v1/payment-widget"></script>
 </head>
 <body>
 
@@ -53,16 +55,24 @@
             <th>테마</th>
             <th>날짜</th>
             <th>시간</th>
-            <th>상태</th>
-            <th>대기 취소</th>
             <th>paymentKey</th>
             <th>결제금액</th>
-            <th></th>
+            <th>상태</th>
+            <th>취소</th>
+            <th>결제</th>
         </tr>
         </thead>
         <tbody id="table-body">
         </tbody>
     </table>
+</div>
+
+<!-- 결제창 ui -->
+<div class="wrapper w-100">
+    <div class="max-w-540 w-100">
+        <div id="payment-method" class="w-100"></div>
+        <div id="agreement" class="w-100"></div>
+    </div>
 </div>
 
 <script src="/js/user-scripts.js"></script>
